--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/applogo.png" />
+    <link rel="icon" href="%PUBLIC_URL%/applogo-192x192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A simple tool to calculate your durations irrespective of time."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/applogo.png" />
+    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/applogo.png" /> -->
+    <!-- Apple Touch Icons for various device sizes -->
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/applogo-180x180.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="%PUBLIC_URL%/applogo-152x152.png" />
+    <link rel="apple-touch-icon" sizes="144x144" href="%PUBLIC_URL%/applogo-144x144.png" />
+    <link rel="apple-touch-icon" sizes="120x120" href="%PUBLIC_URL%/applogo-120x120.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="%PUBLIC_URL%/applogo-114x114.png" />
+    <link rel="apple-touch-icon" sizes="76x76" href="%PUBLIC_URL%/applogo-76x76.png" />
+    <link rel="apple-touch-icon" sizes="57x57" href="%PUBLIC_URL%/applogo-57x57.png" />
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
